# wang-ml-sample

./: .gitignore  README.md  pyproject.toml
data/authors/: authors.csv  authors_ethnicity.csv
data/metadata/: all_metadata.csv  metadata_page_1.csv  metadata_page_10.csv  metadata_page_11.csv  metadata_page_12.csv  metadata_page_13.csv  metadata_page_14.csv  metadata_page_15.csv  metadata_page_16.csv  metadata_page_17.csv  metadata_page_18.csv  metadata_page_19.csv  metadata_page_2.csv  metadata_page_20.csv  metadata_page_21.csv  metadata_page_22.csv  metadata_page_23.csv  metadata_page_24.csv  metadata_page_25.csv  metadata_page_26.csv  metadata_page_27.csv  metadata_page_28.csv  metadata_page_29.csv  metadata_page_3.csv  metadata_page_30.csv  metadata_page_31.csv  metadata_page_32.csv  metadata_page_33.csv  metadata_page_34.csv  metadata_page_35.csv  metadata_page_36.csv  metadata_page_37.csv  metadata_page_38.csv  metadata_page_39.csv  metadata_page_4.csv  metadata_page_40.csv  metadata_page_41.csv  metadata_page_42.csv  metadata_page_43.csv  metadata_page_44.csv  (+18 more)
data/paper_links/: all_research_paper_links.csv  research_paper_links_page_1.csv  research_paper_links_page_10.csv  research_paper_links_page_11.csv  research_paper_links_page_12.csv  research_paper_links_page_13.csv  research_paper_links_page_14.csv  research_paper_links_page_15.csv  research_paper_links_page_16.csv  (+47 more)
scripts/: compiling_paper_links.ipynb  fetch_metadata.ipynb  metadata_analysis_aut_sub.ipynb  metadata_analysis_authors.ipynb  metadata_analysis_subjects.ipynb  metadata_sampling.ipynb
(+2 files in other folders)
