[tool.poetry]
name = "wang-ml"
version = "0.1.0"
description = ""
authors = ["eshanprashar <eshanprashar@uchicago.edu>"]
readme = "README.md"
packages = [{include = "wang_ml"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.2"
pandas = "^2.2.2"
numpy = "^1.26.4"
matplotlib = "^3.9.0"
jellyfish = "^1.0.3"
beautifulsoup4 = "^4.12.3"
regex = "^2024.5.15"
boto3 = "^1.34.113"
faker = "^25.2.0"
selenium = "^4.21.0"
ethnicolr = "^0.9.6"
scikit-learn = "^1.5.0"
seaborn = "^0.13.2"
gensim = "^4.3.2"
nltk = "^3.8.1"
scipy = "^1.13.1"
linalg = "^1.0.4"
transformers = "^4.41.1"
torch = "^2.3.0"
tf-keras = "^2.16.0"
ipykernel = "^6.29.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
